fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: left;
-    width: 70%; /* Adjust this to match the width of your main content if different */
+    width: 90%; /* Adjust this to match the width of your main content if different */
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px; /* Adjust these paddings to match other content */
